Fixed the logo not showing up in Firefox

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -44,10 +44,13 @@ body {
 		text-align: center;
 
 		a {
-			content: url("http://2014.la.wordcamp.org/files/2014/06/wcla14_logo-opt.png");
+			background-image: url("http://2014.la.wordcamp.org/files/2014/06/wcla14_logo-opt.png");
+			background-size: contain;
+			background-position: center top;
 			font-size: 0px;
 			margin: 0 auto;
 			height: 300px;
+			display: block;
 
 			.home & {
 				height: 527px;
